--- a/application/configs/config.ini
+++ b/application/configs/config.ini
@@ -30,7 +30,7 @@ resources.db.prefix =
 
 ;以下为数据库配置
 resources.db.params.host = 192.168.21.100
-resources.db.params.dbname = hardwareshow-china
+resources.db.params.dbname = Chaos
 
 resources.db.params.username = "root"
 resources.db.params.password = "root"
