--- a/application/configs/crontab.ini
+++ b/application/configs/crontab.ini
@@ -26,11 +26,11 @@ resources.db.adapter = "pdo_mysql"
 resources.db.prefix =
 ;以下为数据库配置
 resources.db.params.host = 192.168.21.100
-resources.db.params.dbname = wildcubic
+resources.db.params.dbname = Chaos
 resources.db.params.username = root
 resources.db.params.password = "root"
 resources.cache.adapter = memcached
 resources.cache.host = 127.0.0.1
-resources.cache.port = 11211
+resources.cache.port = 22222
 
 [development : production]
