--- a/application/configs/crontab.ini
+++ b/application/configs/crontab.ini
@@ -25,12 +25,13 @@ resources.db.adapter = "pdo_mysql"
 ;数据库表明前缀
 resources.db.prefix =
 ;以下为数据库配置
-resources.db.params.host = 192.168.21.100
-resources.db.params.dbname = Chaos
+resources.db.params.host = 192.168.99.100
+resources.db.params.dbname = fun
 resources.db.params.username = root
 resources.db.params.password = "root"
-resources.cache.adapter = memcached
-resources.cache.host = 127.0.0.1
-resources.cache.port = 22222
+resources.db.params.port = 3307
+resources.cache.adapter = redis
+resources.cache.host = 192.168.99.100
+resources.cache.port = 6379
 
 [development : production]
